--- a/app/views/articles/new.html.erb
+++ b/app/views/articles/new.html.erb
@@ -1,3 +1,13 @@
+<% if @article.errors.any?%>
+<h2>Following errors prevented the article from being created</h2>
+ <ul>
+<% @article.errors.full_messages.each do |msg| %>
+    <li> <%= msg %> </li>
+    <%end%>
+  </ul>
+<% end %>
+      
+
 <h1>Create an article</h1>
 
 <%= form_for @article do |f| %>
