Add partials and destroy action

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -72,6 +72,7 @@ a:hover{
                 <h5>Edgar Ruiz</h5>
                 <h4>Web Developer</h4>
                 <h3> <a href = "http://emr.thecompletewebhosting.com" target="_blank">Website</a></h3>
+                <%= link_to "Alpha Blog", articles_path %>
             </div>
             
             <div id = "imgcontainer" >
