--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -10,5 +10,6 @@
 <p>Description: <%=article.description %> </p>
 <p>Show Article: <%= link_to "show", article_path(article) %></p>
 <p>Edit Article: <%= link_to "edit", edit_article_path(article) %></p>
+<p>Delete Article: <%= link_to 'delete', article_path(article), method: :delete, data: {confirm: "Are you sure?"}%></p>
 <hr>
 <%end%>
