--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -1,3 +1,67 @@
+$navbar-default-bg: black;
+
 // "bootstrap-sprockets" must be imported before "bootstrap" and "bootstrap/variables"
 @import "bootstrap-sprockets";
 @import "bootstrap";
+
+#logo{
+  color:white;
+  font-weight: bold;
+  font-size: 1.7em;
+  letter-spacing: -1px;
+  text-transform: uppercase;
+  float: left;
+}
+
+#logo:hover{
+  text-decoration: none;
+}
+
+.center{
+  text-align: center;
+}
+
+.jumbotron{
+  background-image: asset-url("rubybg.jpg");
+  background-size: cover;
+  height: 500px;
+}
+
+.jumbotron h1{
+  color:white;
+  font-weight: bold;
+  letter-spacing: -1px;
+}
+
+.btn-xlarge{
+  background-color: black;
+  font-size: 1.7em;
+}
+
+footer{
+  margin-top: 45px;
+  padding-top: 5px;
+  border-top: 1px solid #eaeaea;
+  color: #777;
+  // position:absolute;
+  // bottom:0;
+  
+}
+
+footer a:hover{
+  color: #222;
+}
+
+footer small{
+  float:left;
+}
+
+footer ul{
+  float: right;
+  list-style:none;
+}
+
+footer ul li{
+  float:left;
+  margin-left: 15px;
+}
