--- a/app/views/articles/_form.html.erb
+++ b/app/views/articles/_form.html.erb
@@ -1,13 +1,6 @@
 
-<% if @article.errors.any?%>
-<h2>Following errors prevented the article from being created</h2>
- <ul>
-<% @article.errors.full_messages.each do |msg| %>
-    <li> <%= msg %> </li>
-    <%end%>
-  </ul>
-<% end %>
-      
+  <%= render 'shared/errors', obj: @article %>
+  
     <%= form_for(@article, :html =>{class: "form-horizontal", role: "form"}) do |f| %>
       <div class = "form-group">
         <div class = "control-label col-sm-2">
