--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -1,15 +1,22 @@
-<h1>Articles</h1>
-<hr>
-<p>
-  <h3>  Create a new article</h3>
-  <%= link_to 'new' , new_article_path %>
-</p>
-<hr>
+<h1 align="center">Listing all articles</h1>
+
 <% @articles.each do |article| %>
-  <p>Title: <%=article.title %></p>
-  <p>Description: <%=article.description %> </p>
-  <p>Show Article: <%= link_to "show", article_path(article) %></p>
-  <p>Edit Article: <%= link_to "edit", edit_article_path(article) %></p>
-  <p>Delete Article: <%= link_to 'delete', article_path(article), method: :delete, data: {confirm: "Are you sure?"}%></p>
-  <hr>
-<%end%>
+  <div class="row">
+    <div class = "col-xs-8 col-xs-offset-2">
+      <div class = "well well-lg">
+        <div class = "article-title">
+          <%= link_to article.title, article_path(article) %>
+        </div>
+        <div class = "article-body">
+          <%= truncate(article.description, length:100) %>
+        </div>
+        <div class = "article-actions">
+          <%= link_to "Edit this article" ,edit_article_path(article), class: "btn btn-xs btn-primary"%>
+          <%= link_to "Delete this article", article_path(article), method: :delete,
+                                             data: {confirm: "Are you sure you want to delete the article?"}, 
+                                             class: "btn btn-xs btn-danger" %>
+        </div>
+      </div>
+    </div>
+  </div>
+<% end %>
