--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -2,7 +2,7 @@
 <h2 align = "center">
   Title: <%=@article.title%>
 </h2>
-<div class = "well col-xs-8 col-xs-offet-2">
+<div class = "well col-xs-8 col-xs-offset-2">
   <h4 class = "center description">
     <strong>Description:</strong>
   </h4>
