--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,11 +1,11 @@
 <div class ="container">
   <footer class = "footer">
     <small>
-      Copyright &copy; <a href = "https://lyricallyarticulate.com">Alpha Blog</a>
+      Copyright &copy; <%= link_to "Alpha Blog", root_path %>
     </small>
     <nav>
       <ul>
-        <li> <%= link_to "About", about_path %></li>
+        <li> <%= link_to "About", root_path %></li>
       </ul>
     </nav>
   </footer>
